# ui-act

./: .gitignore  LICENSE  Makefile  README.md  agent.py  main.py  mpx.py  pyproject.toml  test_mpx.py
.github/workflows/: main.yml
launcher/: extension.js  metadata.json  prefs.js  stylesheet.css
launcher/schemas/: gschemas.compiled  org.gnome.shell.extensions.ui-act.gschema.xml
python/: agent.py  mpx.py
ui_act/: Cargo.toml
ui_act/src/: agent.rs  device.rs  env.rs  input.rs  main.rs  telemetry.rs  utils.rs
ui_act/src/env/: full_desktop.rs  single_window.rs
