[package]
name = "ui_act"
version = "0.1.0"
edition = "2024"

[dependencies]
uinput = "0.1.3"
anyhow = "1.0"
thiserror = "1.0"
ctrlc = "3.2"
xcap = "0.6.1"
image = "0.25.6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0.140"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
x11rb = "0.13.1"
uuid = { version = "1.0", features = ["v4"] }
sys-info = "0.9"
once_cell = "1.21.3"
